--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-        <div id="container"></div>
+        <div id="app"></div>
   </body>
 </html>
